更新會員模組
