# app.js
@@ -9,6 +9,7 @@ const swaggerFile = require("./swagger_output.json");
 
 
 const usersRouter = require("./routes/users");
+const AccountRouter = require("./routes/Account");
 const dotenv = require("dotenv");
 
 
@@ -43,6 +44,7 @@ app.use(express.static(path.join(__dirname, "public")));
 app.use("/api-doc", swaggerUI.serve, swaggerUI.setup(swaggerFile));
 
 app.use("/v1/api/auth", usersRouter);
+app.use("/v1/api/Admin/Account", AccountRouter);
 
 
 // 404 錯誤
